<resources>
    <string name="app_name">Linear Algebra Calculator</string>
    <string name="calculate_help">Select matrix size then enter matrix data.</string>
    <string name="button_Calculate">Calculate</string>
    <string name="button_Done">Continue</string>
    <string name="button_Donate">Donate</string>
    <string name="button_Settings">Settings</string>
    <string name="button_Home">Home</string>
    <string name="button_Info">Info</string>
    <string name="title_activity_calculate__screen">calculate_Screen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_donate">Donate</string>
    <string name="title_activity_info">Info</string>
    <string name="contact">Contact Us</string>
    <string name="contactInfo">Find any bugs or want to request a feature? Get in touch with us here.</string>
    <string name="contactAbout">About</string>
    <string name="contactAboutInfo">We made this thing.</string>
    <string name="contactAboutRepo">Github Repo: github.com/N0XIRE/LinearAlgebraCalculator</string>
    <string name="contactAboutDevs">Developed By</string>
    <string name="contactAboutConnor">Connor Wilson: github.com/N0XIRE</string>
    <string name="contactAboutSpencer">github.com/RedCyanide</string>
    <string name="contactMail">connorwilson989@gmail.com</string>
    <string name="contactOther">Other contact here.</string>
    <string name="ad_id_banner">ca-app-pub-3940256099942544/6300978111</string>
</resources>
